--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,4 @@
 <%= form_for(@user) do |f| %>
-	
 	<div class="form-group">
 		<%= f.label :name %>
 		<%= f.text_field :name, :value => @user.name,
@@ -15,5 +14,8 @@
 		<%= f.password_field :password, :value => @user.password,
 			class: "form-control" %>
 	</div>
-	<%= f.submit "Update Account", class: "btn btn-primary" %>
+	<p>
+		<%= f.submit "Update Account", class: "btn btn-primary" %>
+		<%= link_to "Deactivate Account", profile_delete_path, class: "btn btn-primary" %>
+	</p>
 <% end %>
