--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,5 @@
+
+
 .site-container
 {
     max-width:100%;
@@ -52,18 +54,12 @@
 .nav-header .input-text
 {
     text-decoration: none;
-    color:#D8ECDD;
+    color:#18291C;
     font-family:sans-serif;
     font-size:1em;
 }
 
-.nav-header li input[type="search"]
-{
-    text-decoration: none;
-    font-family:sans-serif;
-    font-size:1em;
-    color:red;
-}
+
 
 .content-holder
 {
@@ -78,14 +74,13 @@
     width:100%;
 }
 
-/* .col p
+#post-wrapper
 {
-    color:#D8ECDD;
-    font-size:2em;
-    letter-spacing: 0.6em;
-    padding-top:4em;
+    max-width:100%;
+    float:left;
+    clear:both;
+    
 }
-*/
 
 .content-holder .col
 {
@@ -163,3 +158,7 @@ p .div-message
     color:rgba(153, 204, 153, 1));
     background:rgba(216, 236, 221, 1);
 }
+
+
+
+
