--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width">
   <meta charset="utf-8">
-  <name name="viewport" content="width=device-width, initial-scale=1">
+  
 </head>
 <body>
 <% if notice %>
@@ -16,24 +17,31 @@
 <div class="alert alert-danger"><%= alert %></div>
 <% end %>
 <nav class="nav-header">
-	<ul>
-		<li><h1>Converse</h1></li>
-		<li><a href="<%= root_path %>">Home</a></li>
-		<li><a href="<%= posts_path %>">Posts</a></li>
-		<li><a href="<%= members_path %>">Members</a></li>
-		<li class="input-text">Search: <input type="search"></li>
-		<li>
-		<% if current_user %>
-		<%= link_to 'Log Out', logout_path %>
-		<%= link_to 'Profile', profile_path %>
-		<% else %>
-		<%= link_to 'Log In', login_path %> or
-		<%= link_to 'Sign Up', signup_path %>
-		<% end %>
-		</li>
-	</ul>
-	
+  <ul>
+    <li><h1>Converse</h1></li>
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li><a href="<%= posts_path %>">Posts</a></li>
+    <li><a href="<%= members_path %>">Members</a></li>
+    <li class="input-text">
+      <%= form_tag "/posts/find" do %>
+        <%= text_field_tag :search_string %>
+        <%= submit_tag "Search" %>
+      <% end %>
+    </li>
+    <li>
+    <% if current_user %>
+    <%= link_to 'Log Out', logout_path %>
+    <%= link_to 'Profile', profile_path %>
+    <% else %>
+    <%= link_to 'Log In', login_path %> or
+    <%= link_to 'Sign Up', signup_path %>
+    <% end %>
+    </li>
+  </ul>
+  
 </nav>
+
+
 
 <%= yield %>
 
