--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,18 @@
-<% @posts.each do |post| %>
-  <%= post.inspect %>
-<% end %>
+
+	<%= @post.title %><br>
+	<%= @post.body %>
+
+	<h2>Comments</h2>
+	<%= render @post.comments %>
+
+	<h4>New Comment</h4>
+
+	<%= form_for [@post, @post.comments.build] do |f| %>
+		<div class='field'>
+			<%= f.label :body %><br>
+			<%= f.text_area :body %>
+		</div>
+			<div class='actions'>
+			<%= f.submit %>
+		</div>
+	<% end %>
