--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="member-array">
 	<% for i in @users do %>
-	<p class ="member-joining"><%= i.name %> just joined the site at: <b><%= i.created_at %></b></p><br>
+	<p class ="member-joining"><%= link_to i.name %> just joined the site at: <b><%= i.created_at %></b></p><br>
 	<% end %>
 </div>
