Users are able to comment on post but...need to fix a minor bug. Do not worry about crappy styling. Once all the features are fixed by beta realize, I will style the site properly and make it responsive towards all platform devices.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
   <ul>
     <li><h1>Converse</h1></li>
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= posts_path %>">Posts</a></li>
+    <% if current_user %>
+     <li><a href="<%= posts_path %>">Posts</a></li>
+    <% end %>
     <li><a href="<%= members_path %>">Members</a></li>
     <li class="input-text">
       <%= form_tag "/posts/find" do %>
