--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   
 </head>
@@ -16,33 +17,29 @@
 <% if alert %>
 <div class="alert alert-danger"><%= alert %></div>
 <% end %>
-<nav class="nav-header">
-  <ul>
-    <li><h1>Converse</h1></li>
-    <li><a href="<%= root_path %>">Home</a></li>
+  <ul class="navigation">
+    <li class="nav-item"><a href="<%= root_path %>">Home</a></li>
     <% if current_user %>
-     <li><a href="<%= posts_path %>">Posts</a></li>
+     <li class="nav-item"><a href="<%= posts_path %>">Posts</a></li>
     <% end %>
-    <li><a href="<%= members_path %>">Members</a></li>
-    <li class="input-text">
+    <li class="nav-item"><a href="<%= members_path %>">Members</a></li>
+    <% if current_user %>
+    <li class="nav-item"><%= link_to 'Log Out', logout_path %></li>
+    <li class="nav-item"><%= link_to 'Profile', profile_path %></li>
+    <% else %>
+    <li class="nav-item"><%= link_to 'Log In', login_path %></li>
+    <li class="nav-item"><%= link_to 'Sign Up', signup_path %></li>
+    <% end %>
+    <li class="nav-item">
       <%= form_tag "/posts/find" do %>
-        <%= text_field_tag :search_string %>
-        <%= submit_tag "Search" %>
+         <li class="nav-item"><%= text_field_tag :search_string %>
+         <li class="nav-item"><%= submit_tag "Search" %>
       <% end %>
     </li>
-    <li>
-    <% if current_user %>
-    <%= link_to 'Log Out', logout_path %>
-    <%= link_to 'Profile', profile_path %>
-    <% else %>
-    <%= link_to 'Log In', login_path %> or
-    <%= link_to 'Sign Up', signup_path %>
-    <% end %>
-    </li>
   </ul>
-  
-</nav>
 
+  <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+  <label for="nav-trigger"></label>
 
 
 <%= yield %>
