--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,7 @@
 		</head>
 
 		<body>
+		<div class="site-wrap">
 		<%= form_for(@user) do |f| %>
 			<% if @user.errors.any? %>
 				<div class="alert alert-danger">
@@ -41,5 +42,6 @@
 			<%= link_to 'Already a Member?', login_path %>
 			</p>
 		<% end %>
+		</div>
 		</body>
 	</html>
