--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 <div class="alert alert-danger"><%= alert %></div>
 <% end %>
   <ul class="navigation">
+    <li class="nav-item"><img class="top-banner"></li>
     <li class="nav-item"><a href="<%= root_path %>">Home</a></li>
     <% if current_user %>
      <li class="nav-item"><a href="<%= posts_path %>">Posts</a></li>
@@ -30,13 +31,13 @@
     <li class="nav-item"><%= link_to 'Log In', login_path %></li>
     <li class="nav-item"><%= link_to 'Sign Up', signup_path %></li>
     <% end %>
-    <li class="nav-item">
       <%= form_tag "/posts/find" do %>
-         <li class="nav-item"><%= text_field_tag :search_string %>
-         <li class="nav-item"><%= submit_tag "Search" %>
+        <div class="search-box"><%= text_field_tag :search_string %></div>
+        <%= submit_tag "Search", class: "btn btn-lg btn-default" %>
       <% end %>
-    </li>
+            
   </ul>
+  
 
   <input type="checkbox" id="nav-trigger" class="nav-trigger" />
   <label for="nav-trigger"></label>
