--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,10 +6,7 @@
 
 		<body>
 			<div class="site-wrap">
-				<div class="site-wrapper">
-					<div class="site-wrapper-inner">
-						<div class="cover-container">
-						    <div class="inner cover">
+								<div class="cover-page-container">
 			            		<h1 class="cover-heading">Converse</h1>
 			            		<p class="lead">A anonymous disccusion forum for like-minded individuals.</p>
 			      				<p class ="lead">
@@ -24,15 +21,7 @@
 										<a href="<%= login_path %>" class="btn btn-lg btn-default">Login</a>         
 			             			<% end %>
 			          			 </p>
-			          		</div>
-							<div class="mastfoot">
-			            	<div class="inner">
-
-			               </div>
-			               </div>
-				        </div>
-					 </div>
-				</div>
+			          			 </div>
 			</div>
 		</body>	
 	</html>
