--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -164,9 +164,20 @@ p .div-message
     background:rgba(216, 236, 221, 1);
 }
 
+.cover-page-container
+{
+    margin-top:10%;
+}
 
+.cover-heading
+{
+    text-align:center;
+}
 
-
+.lead
+{
+    text-align: center;
+}
 /*
 ##############################################################################
 ##############################################################################
@@ -176,3 +187,13 @@ p .div-message
 
 
 
+.top-banner
+{
+    background:url('beta-pic.png');
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+    background-origin: contain;
+    margin-bottom:20px;
+    width:200px;
+    height:100px;
+}
