--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,10 @@
+<div class="page-wrap">
+<div class="center-form">
 <p><%= comment.author %> said:</p>
 
 <blockquote>
 <%= comment.body %>
 </blockquote>
+
+</div>
+</div>
