--- a/app/views/posts/find.html.erb
+++ b/app/views/posts/find.html.erb
@@ -1,3 +1,6 @@
+
+<div class="page-wrap">
+<div class="center-form">
 <h1>Search Results:</h1>
 
 <%= @posts.each do |posts| %>
@@ -5,3 +8,6 @@
 		<p><%= link_to posts.title, posts %></p>
 	</div>
 <% end %>
+
+</div>
+</div>
