--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
+	<div class="page-wrap">
+	<div class="center-form">
 	<% @posts.each do |post| %>
 		<div id="post-wrapper">
 			<%= link_to post.title, post %>
 		</div>
 	<% end %>
+	</div>
+	</div>
