--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-
+<div class="page-wrap">
+<div class="center-form">
 	<%= @post.title %><br>
 	<%= @post.body %>
 
@@ -22,3 +23,5 @@
 			</div>
 		<% end %>
 	<% end %>
+	</div>
+	</div>
