--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="page-wrap">
+<div class="center-form">
 <%= form_for(@user) do |f| %>
 	<div class="form-group">
 		<%= f.label :name %>
@@ -19,3 +21,5 @@
 		<%= link_to "Deactivate Account", profile_delete_path, class: "btn btn-primary" %>
 	</p>
 <% end %>
+</div>
+</div>
