--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
+<div class="page-wrap">
+<div class="center-form">
 <div class="form-main">
 	<%= form_for(@post) do |f| %>
 		<p><b>Current User:</b> <%= @user.name %></p>
@@ -12,4 +14,6 @@
 		</div>
 		<%= f.submit "Create Post", class: "btn btn-primary" %>
 	<% end %>
+</div>
+</div>
 </div>
