--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
-<div class="member-array">
-	<% for i in @users do %>
-	<p class ="member-joining"><%= link_to i.name %> just joined the site at: <b><%= i.created_at %></b></p><br>
-	<% end %>
+<div class="page-wrap">
+<div class="center-form">
+	<div class="member-array">
+		<% for i in @users do %>
+		<p class ="member-joining"><%= link_to i.name %> just joined the site at: <b><%= i.created_at %></b></p><br>
+		<% end %>
+	</div>
+</div>
 </div>
