--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,11 @@
         <div class="search-box"><%= text_field_tag :search_string %></div>
         <%= submit_tag "Search", class: "btn btn-lg btn-default" %>
       <% end %>
-            
+    <p class="social-icons">
+      <div class="smi1"></div>
+      <div class="smi2"></div>
+      <div class="smi3"></div>
+    </p> 
   </ul>
   
   <input type="checkbox" id="nav-trigger" class="nav-trigger" />
