--- a/app/assets/stylesheets/navigation.css
+++ b/app/assets/stylesheets/navigation.css
@@ -2,7 +2,7 @@
 /* Navigation Menu - Background */
 .navigation {
   /* critical sizing and position styles */
-  width: 100%;
+  width: 200px;
   height: 100%;
   position: fixed;
   top: 0;
