Minimal changes made

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
   <% if notice %>
-    <div class="notice notice-success"><%= notice %></div>
+    <div id = "notice-success" class="notice notice-success"><%= notice %></div>
   <% end %>
   <% if alert %>
     <div class="notice notice-danger"><%= alert %></div>
