added an about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <ul class="navigation">
     <li class="nav-item"><img class="top-banner"></li>
     <li class="nav-item"><a href="<%= root_path %>">Home</a></li>
+    <li class="nav-item"><a href="<%= about_path %>">About</a></li>
     <% if current_user %>
      <li class="nav-item"><a href="<%= posts_path %>">Posts</a></li>
     <% end %>
