another small change to UI

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -13,7 +13,7 @@
           <div class="container">
             <div class="carousel-caption">
               <p>
-              	<a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a>
+              	<%= link_to 'Sign Up Today', signup_path, class: "btn btn-lg btn-primary" %>
               </p>
             </div>
           </div>
