--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     <li class="nav-item"><a href="<%= about_path %>">About</a></li>
     <% if current_user %>
      <li class="nav-item"><a href="<%= posts_path %>">Posts</a></li>
+     <li class="nav-item"><a href="<%= new_post_path %>">Create Post</a></li>
     <% end %>
     <li class="nav-item"><a href="<%= members_path %>">Members</a></li>
     <% if current_user %>
