Finsihed editing about page, and fixed time date on post page

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,37 +1,9 @@
 <div class="page-wrap">
 
-
-
-    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-     
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <p>
-              	<%= link_to 'Sign Up Today', signup_path, class: "btn btn-lg btn-primary" %>
-              </p>
-            </div>
-          </div>
-        </div>
-       
-        
-     </div>
-      
-    </div><!-- /.carousel -->
-
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
+    <div class="container-marketing">
 
       <!-- Three columns of text below the carousel -->
+      <h1>Meet the Team</h1>
       <div class="row">
         <div class="col-lg-4">
           <%= image_tag("founder.jpg", class: "img-circle", size: "140x140", alt: "Founder pic") %>
@@ -44,6 +16,20 @@
           	<a class="btn btn-default" href="https://www.facebook.com/joseph.bourne.9634" role="button">Facebook &raquo;</a>
           	<a class="btn btn-default" href="https://twitter.com/Kiratsuchi" role="button">Twitter &raquo;</a>
           	<a class="btn btn-default" href="https://github.com/kiratsuchi" role="button">Github &raquo;</a>
+          </p>
+        </div><!-- /.col-lg-4 -->
+
+        <div class="col-lg-4">
+          <%= image_tag("founder.jpg", class: "img-circle", size: "140x140", alt: "Founder pic") %>
+          <h2>Joseph Bourne</h2>
+          <h4>Backend Web Developer</h4>
+          <p>Founder of Converse Chat. When Joseph isn't developing web applications
+          at work or for clients; he enjoys random walks on the beach, geeking out to 
+          scifi movies, and overall improving his skills as developer.</p>
+          <p>
+            <a class="btn btn-default" href="https://www.facebook.com/joseph.bourne.9634" role="button">Facebook &raquo;</a>
+            <a class="btn btn-default" href="https://twitter.com/Kiratsuchi" role="button">Twitter &raquo;</a>
+            <a class="btn btn-default" href="https://github.com/kiratsuchi" role="button">Github &raquo;</a>
           </p>
         </div><!-- /.col-lg-4 -->
        
@@ -96,7 +82,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2015 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2016 ConverseChat, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
