--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -1,4 +1,8 @@
-
+.container-marketing h1
+{
+  text-align: center;
+  padding:30px 0px;
+}
 
 .img-circle:hover
 {
@@ -66,9 +70,10 @@
 
 .first-slide
 {
-  background:url(beta-pic.png);
+  background:url(converse-large-logo.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  height:50%;
 
 }
 
