--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,9 @@
 					</div>
 				<% end %>
 				<div class="form-group">
+					<%= f.file_field :avatar, multiple: true %>
+				</div>
+				<div class="form-group">
 					<%= f.label :name %>
 					<%= f.text_field :name, class: "form-control" %>
 				</div>
