--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,19 @@
 <div class="center-form">
 <div class="form-main">
 	<%= form_for(@post) do |f| %>
+	<% if @post.errors.any? %>
+					<div class="notice notice-danger">
+					<strong>
+					<%= pluralize(@post.errors.count, "error") %>
+					prevented you from signing up:
+					</strong>
+					<ul>
+					<% @post.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+					<% end %>
+					</ul>
+					</div>
+				<% end %>
 		<p><b>Current User:</b> <%= @user.name %></p>
 		<p><b>Current Date:</b> <%= currentDate %></p>
 		<div class="form-group">
