Made some changes to comment and post layout erb files

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,9 @@
 <div class="center-form">
-	<div class="comment-holder"
-		<p><%= comment.author %> said:</p>
+	<div class="comment-holder">
+		<p class="author-part"><%= comment.author %> said:</p>
 
 		<blockquote>
 		<%= comment.body %>
 		</blockquote>
-
 	</div>
 </div>
