--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -13,20 +13,6 @@
           at work or for clients; he enjoys random walks on the beach, geeking out to 
           scifi movies, and overall improving his skills as developer.</p>
           <p>
-          	<a class="btn btn-default" href="https://www.facebook.com/joseph.bourne.9634" role="button">Facebook &raquo;</a>
-          	<a class="btn btn-default" href="https://twitter.com/Kiratsuchi" role="button">Twitter &raquo;</a>
-          	<a class="btn btn-default" href="https://github.com/kiratsuchi" role="button">Github &raquo;</a>
-          </p>
-        </div><!-- /.col-lg-4 -->
-
-        <div class="col-lg-4">
-          <%= image_tag("founder.jpg", class: "img-circle", size: "140x140", alt: "Founder pic") %>
-          <h2>Joseph Bourne</h2>
-          <h4>Backend Web Developer</h4>
-          <p>Founder of Converse Chat. When Joseph isn't developing web applications
-          at work or for clients; he enjoys random walks on the beach, geeking out to 
-          scifi movies, and overall improving his skills as developer.</p>
-          <p>
             <a class="btn btn-default" href="https://www.facebook.com/joseph.bourne.9634" role="button">Facebook &raquo;</a>
             <a class="btn btn-default" href="https://twitter.com/Kiratsuchi" role="button">Twitter &raquo;</a>
             <a class="btn btn-default" href="https://github.com/kiratsuchi" role="button">Github &raquo;</a>
@@ -46,7 +32,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+         <%= image_tag("beta-pic.png", height: "600", class: "featurette-image img-responsive center-block", alt: "pic1") %>
         </div>
       </div>
 
