about page finished

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -28,8 +28,9 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Converse Chat. <span class="text-muted">It'll blow your mind.</span></h2>
+          <p class="lead">Converse chat is forum-based application that allows users to monetize from their post topics.
+          A simple and lightweight platform to create engaging post, and receive earnings.</p>
         </div>
         <div class="col-md-5">
          <%= image_tag("beta-pic.png", height: "600", class: "featurette-image img-responsive center-block", alt: "pic1") %>
@@ -40,11 +41,14 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">Monetize from your online posted topics..</span></h2>
+          <p class="lead">Don't just sit on the computer all day without making a dime. Converse chat allows users to receive currency 
+          from other users based off their created post. All members can contribute or monetize from topic created on converse..</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <%= image_tag("pp-logo.png",  size: "320x320", class: "featurette-image img-responsive center-block", alt: "pic1") %><br><br>
+          <%= image_tag("cb-logo.png", size: "320x320", class: "featurette-image img-responsive center-block", alt: "pic1") %>
+         
         </div>
       </div>
 
@@ -52,11 +56,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <h2 class="featurette-heading">And lastly, <span class="text-muted">Sharing is caring.</span></h2>
+          <p class="lead">Be sure to share your posts with your friends and family on social media.</p>
         </div>
       </div>
 
