made some changes to main layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,12 @@
       <%= form_tag "/posts/find" do %>
         <div class="search-box"><%= text_field_tag :search_string %></div>
         <%= submit_tag "Search", class: "btn btn-lg btn-default" %>
-      <% end %>
+      <% end %><br>
     <p class="social-icons">
-      <div class="smi1"></div>
-      <div class="smi2"></div>
-      <div class="smi3"></div>
+      <a class="smi1" href="https://www.facebook.com/ConverseDevs/" target="_"></a>
+      <a class="smi2" href="https://twitter.com/ConverseDev" target="_"></a>
+      <a class="smi3" href="https://www.youtube.com/channel/UCi6oeSL--oLLemSI1smaoWQ"
+      target="_"></a>
     </p> 
   </ul>
   
